# quorum

./: .gitignore  PR_DRAFT.md  README.md  WRITEUP.md
crates/host-smoke/: Cargo.toml
crates/host-smoke/src/: lib.rs
crates/host-smoke/tests/: smoke.rs
crates/quorum-core/: Cargo.toml
crates/quorum-core/src/: lib.rs  message.rs  policy.rs  pubkey.rs  receipt.rs  rpc.rs  spl.rs  squads.rs
crates/quorum-core/tests/: mainnet_fixture.rs  squads_v4_fixture.rs  vectors.rs
crates/quorum-core/tests/fixtures/: squads_v4_proposal.json
plugins/squads-propose/: Cargo.toml  README.md  manifest.toml
plugins/squads-propose/src/: core.rs  lib.rs
plugins/squads-propose/tests/: core.rs
plugins/squads-watch/: Cargo.toml  README.md  manifest.toml
plugins/squads-watch/src/: core.rs  lib.rs
plugins/squads-watch/tests/: core.rs
plugins/tx-xray/: Cargo.toml  README.md  manifest.toml
plugins/tx-xray/src/: core.rs  lib.rs
plugins/tx-xray/tests/: core.rs
tools/: fetch-fixture.py  gen-v4-fixture.mjs
wit/: UPSTREAM_PIN.md
wit/v0/: channel.wit  sockets.wit  ws-client.wit
