# Dev-only integration harness: loads the built wasm components through the
# REAL ZeroClaw host adapter (wasmtime + WasmTool), pinned to the same host
# commit our upstream clone tracks. Never staged to the registry, never
# published. Build the plugins for wasm32-wasip2 first (see tests/smoke.rs).
[package]
name = "host-smoke"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]

[dev-dependencies]
zeroclaw-plugins = { git = "https://github.com/zeroclaw-labs/zeroclaw", rev = "fc8b4d83e3a5eacd98486aaa51785b07a6c733dd", default-features = false, features = ["plugins-wasm-cranelift"] }
zeroclaw-api = { git = "https://github.com/zeroclaw-labs/zeroclaw", rev = "fc8b4d83e3a5eacd98486aaa51785b07a6c733dd" }
quorum-squads-core = "0.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[workspace]
