# Standalone crate (own [workspace]): built for wasm32-wasip2 as a tool plugin
# component; the pure core (rlib) is host-tested with plain `cargo test`.
# `waki` (the blocking wasi:http client) is a wasm-only dep so the host test
# build never tries to compile it.
[package]
name = "squads-propose"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ZeroClaw tool plugin: draft Squads v4 payment proposals as unsigned transactions. The agent proposes, the multisig disposes; the plugin holds no keys."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quorum-core = { path = "../../crates/quorum-core" }

[dev-dependencies]
base64 = "0.22"
bs58 = "0.5"

# wasm-only deps: the WIT shim and the wasi:http client are only compiled
# for the component target, never on the host.
[target.'cfg(target_family = "wasm")'.dependencies]
wit-bindgen = "0.46"
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
