# Standalone crate (own [workspace]): built for wasm32-wasip2 as a tool plugin
# component; the pure core (rlib) is host-tested with plain `cargo test`.
[package]
name = "tx-xray"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ZeroClaw tool plugin: decode and simulate any unsigned Solana transaction into a short truthful receipt. Approve what it does, not what the agent says."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quorum-core = { path = "../../crates/quorum-core" }

[dev-dependencies]
bs58 = "0.5"

# wasm-only deps: the WIT shim and the wasi:http client are only compiled
# for the component target, never on the host.
[target.'cfg(target_family = "wasm")'.dependencies]
wit-bindgen = "0.46"
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
